# AI-LLM-RAG-best-practices

./: .gitignore  README.md
Arize-Phoenix/: .gitignore  L3_modified.ipynb  L5_with_arize_phoenix.ipynb  L7_add_evaluations_to_phoenix.ipynb  README.md  generate_data.py  helper.py  pyproject.toml  utils.py
Arize-Phoenix/data/: Store_Sales_Price_Elasticity_Promotions_Data.parquet
Fine Tuning/: LoRa-AdaLoRa.md  QLora.md  Readme.md  Training Parameters.md
LangGraph/: LangGraph-Patterns.md  Prompt-Decision-Tree.md  Prompt-Multi-Agent.md  Prompt-Plan-Execute.md  Prompt-ReACT.md  Prompt-Reflection.md  README.md
LangGraph/Examples/ReACT/ReACT-Lab2-LangGraph/: .env.example  LangGraph-lab.ipynb  README.md
LangGraph/Examples/ReACT/ReACT_Lesson_1/: .env  LangGraph_Lab1_ReACT.ipynb  README.md  requirements.txt
LangGraph/LangGraph-Create_React_Agent/: .env.example  README.md  graph.py  langgraph.json  requirements.txt
LangGraph/LangGraph_Langwatch_cli/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
LangGraph/LangGraph_Langwatch_cli/monitoring/: __init__.py  langwatch_tracker.py
LangGraph/LangGraph_Langwatch_cli/src/: __init__.py  main.py  orchestrator.py
LangGraph/LangGraph_Langwatch_cli/src/agents/: __init__.py  base_agent.py  research_agent.py  summarization_agent.py
LangGraph/LangGraph_Langwatch_cli/src/agents/research_agent/: research_agent.py  state.py  tools.py
LangGraph/LangGraph_Langwatch_cli/src/agents/summarization_agent/: summarization_agent.py
LangGraph/LangGraph_Langwatch_cli/src/config/: application_config.py  llm_config.py  research_config.py
LangGraph/LangGraph_Langwatch_cli/src/examples/: __init__.py
LangGraph/LangGraph_Langwatch_cli/src/langgraph_langwatch_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LangGraph/LangGraph_Langwatch_cli/src/models/: relevant_data.py
LangGraph/LangGraph_Langwatch_cli/src/prompts/: __init__.py  prompt_loader.py  research_agent_prompt.toml
LangGraph/LangGraph_Langwatch_cli/src/workflows/: __init__.py  base_workflow.py  research_summarization_workflow.py
LangGraph/LangGraph_Langwatch_cli/tests/: README.md  __init__.py  test_prompts.py
LangGraph/LangGraph_Langwatch_cli/tests/test_agents/: test_research_agent_integration.py
LangGraph/LangGraph_Prototype/: .gitignore  Readme.md  main.py  requirements.txt
LangGraph/LangGraph_Prototype/data/: example.txt  sample_rules.json
LangWatch/: LangWatch And LangFuse.md
Langchain/first-experiment/: README.md  main.py  pyproject.toml
Langchain/first-experiment/src/: langchain_pipelines.py  output.py
MCPServers/FastMCP-Example/: .gitignore  README.md  mcp_example.py  requirements.txt
ML/: Advanced Training Techniques.md  CNN Advanced Concepts.md  Neural Network Fundamentals.md  Readme.md
advanced-topics/: Advanced Retrieval & Re-ranking.md  Document Retrieval Metrics.md  Document_Retrieval_Metrics_2.md  Fundamental Metrics F1 Precision Recall.md  LangGraph_Advanced.md  LangGraph_Basics.md  RAG System assessment and quality control.md  Response Quality Metrics 2.md  Response Quality Metrics.md
advanced-topics/AI_agents/: AI_Agents_in_AI_Applications.md  Agentic_Evaluations.md
advanced-topics/Homomorphic/: Homomorphic_Encryption_Main.md  Homomorphic_Examples.md  Q&A_Quick_References.md
